Changing URLs to the appropriate location.

--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
 </script>
 </head>
 <body style='padding-top:60px'>
-<a href="https://github.com/int3/doppio">
+<a href="https://github.com/plasma-umass/doppio">
   <img style="position: fixed; top: 0; right: 0; border: 0;z-index:9999"
   src="browser/ribbon.png" alt="Fork me on GitHub">
 </a>
@@ -63,8 +63,8 @@ Seminar.</a> It has since taken on a life of its own, and is complete
 enough to run the following programs:</p>
 
 <ul>
-<li><a href="https://github.com/int3/doppio/blob/master/test/special/Diff.java">GNU Diff</a></li>
-<li><a href="https://github.com/int3/doppio/blob/master/test/special/Lzw.java">LZW compression</a></li>
+<li><a href="https://github.com/plasma-umass/doppio/blob/master/test/special/Diff.java">GNU Diff</a></li>
+<li><a href="https://github.com/plasma-umass/doppio/blob/master/test/special/Lzw.java">LZW compression</a></li>
 <li>The Java 6 compiler</li>
 <li><a href="http://www.gnu.org/software/kawa/">Kawa Scheme</a></li>
 <li><a href="https://developer.mozilla.org/en-US/docs/Rhino">Rhino</a></li>
@@ -75,7 +75,7 @@ enough to run the following programs:</p>
 <p>The code has been tested on the latest versions of Chrome, Firefox, Safari,
 Opera, IE 9, IE 10, and Node, but should run in just about any browser.</p>
 
-<p>Check out the <a href="http://int3.github.com/doppio">demo!</a></p>
+<p>Check out the <a href="http://plasma-umass.github.com/doppio">demo!</a></p>
 
 <hr />
 
