--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 </div>
 <div id='overlay'>
 </div>
-<a href="https://github.com/int3/doppio">
+<a href="https://github.com/plasma-umass/doppio">
   <img style="position: fixed; top: 0; right: 0; border: 0;z-index:9999"
   src="browser/ribbon.png" alt="Fork me on GitHub">
 </a>
