--- a/browser/_navbar.html
+++ b/browser/_navbar.html
@@ -1,4 +1,4 @@
-<a href="https://github.com/int3/doppio">
+<a href="https://github.com/plasma-umass/doppio">
   <img style="position: fixed; top: 0; right: 0; border: 0;z-index:9999"
   src="browser/ribbon.png" alt="Fork me on GitHub">
 </a>
